<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bck_dark_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/GeneralConfiguration">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:text="@string/driving_activity_title"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/activity_driving_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/action_back"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/activity_driving_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:backgroundTint="@color/colorOrangeSalle"
            android:text="Mode"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/activity_driving_joystick"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:JV_backgroundColor="@color/colorPrimaryDark"
        app:JV_borderColor="@color/colorSalle"
        app:JV_borderWidth="4dp"
        app:JV_buttonColor="@color/colorSalle"
        app:JV_buttonSizeRatio="33%"
        app:JV_fixedCenter="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/driving_speed_title"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/activity_driving_seekBar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/back_white_rad"
            app:isb_max="100"
            app:isb_min="0.0"
            app:isb_progress="25"
            app:isb_seek_smoothly="true"
            app:isb_show_indicator="rounded_rectangle"
            app:isb_show_tick_marks_type="oval"
            app:isb_thumb_color="@color/colorSalle"
            app:isb_thumb_size="40dp"
            app:isb_track_background_size="2dp"
            app:isb_track_progress_color="@color/colorSalle"
            app:isb_track_progress_size="5dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/activity_driving_slowest_btn"
            style="@style/SpeedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Bus" />

        <Button
            android:id="@+id/activity_driving_slow_btn"
            style="@style/SpeedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="Slow" />

        <Button
            android:id="@+id/activity_driving_normal_btn"
            style="@style/SpeedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="Normal" />

        <Button
            android:id="@+id/activity_driving_fast_btn"
            style="@style/SpeedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="Fast" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>